--- a/main.html
+++ b/main.html
@@ -3,10 +3,16 @@
 <html>
 
 <head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width,initial scale=1.0">
 	<link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
+
+	<div class="main">
+		<div class="heading" id="heading">This is a Heading</div>
+	</div>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
