--- a/main.html
+++ b/main.html
@@ -6,6 +6,20 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width,initial scale=1.0">
 	<link rel="stylesheet" href="styles.css">
+
+	<style>
+		.main{
+			width:200px;
+			background-color:purple;
+			border-left:5px solid green
+		}
+
+		.heading{
+			padding:10px;
+			color:white;
+			text-decoration:underline;
+		}
+	</style>
 </head>
 
 <body>
