--- a/main.html
+++ b/main.html
@@ -12,9 +12,11 @@
 			width:200px;
 			background-color:purple;
 			border-left:5px solid green
+			
 		}
 
 		.heading{
+			font-size:20px
 			padding:10px;
 			color:white;
 			text-decoration:underline;
