--- a/main.html
+++ b/main.html
@@ -8,16 +8,11 @@
 	<link rel="stylesheet" href="styles.css">
 
 	<style>
-		.main{
-			width:200px;
-			background-color:purple;
-			border-left:5px solid green
-			
-		}
+		
 
 		.heading{
 			font-size:20px
-			padding:10px;
+			padding:10px ;
 			color:white;
 			text-decoration:underline;
 		}
@@ -26,7 +21,7 @@
 
 <body>
 
-	<div class="main">
+	<div class="main" style="width:200px">
 		<div class="heading" id="heading">This is a Heading</div>
 	</div>
 	<!-- the entire body must be written by student -->
