--- a/main.html
+++ b/main.html
@@ -12,7 +12,7 @@
 
 <body>
 
-	<div class="main" style="width:200px">
+	<div class="main" >
 		<div class="heading" id="heading">This is a Heading</div>
 	</div>
 	<!-- the entire body must be written by student -->
