--- a/main.html
+++ b/main.html
@@ -13,7 +13,7 @@
 <body>
 
 	<div class="main" >
-		<div class="heading" >This is a Heading</div>
+		<div class="heading" id="heading">This is a Heading</div>
 	</div>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
